--- a/app/widgets/Map/leaflet_map.html
+++ b/app/widgets/Map/leaflet_map.html
@@ -14,11 +14,47 @@
   <div id="map"></div>
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script>
+    // Harita objesi
     const map = L.map('map', { zoomControl: true }).setView([39.0, 35.0], 6);
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+
+    // ==== BASEMAP KATLARI ====
+    let streetLayer = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       maxZoom: 19,
       attribution: '© OpenStreetMap'
-    }).addTo(map);
+    });
+
+    // Esri World Imagery (uydu) – kullanım şartlarını kendin kontrol et
+    let satelliteLayer = L.tileLayer(
+      'https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}',
+      {
+        maxZoom: 19,
+        attribution: 'Tiles © Esri'
+      }
+    );
+
+    let currentBaseLayer = null;
+
+    // Basemap değiştir
+    window.setBasemap = function(mode) {
+      let newLayer;
+      if (mode === 'satellite') {
+        newLayer = satelliteLayer;
+      } else {
+        newLayer = streetLayer;
+      }
+
+      if (currentBaseLayer !== newLayer) {
+        if (currentBaseLayer) {
+          map.removeLayer(currentBaseLayer);
+        }
+        newLayer.addTo(map);
+        currentBaseLayer = newLayer;
+      }
+    };
+
+    // İlk açılışta direkt uyduya geç
+    setBasemap('satellite');
+    // İstersen normal başlasın dersen: setBasemap('street');
 
     // Cihaz konumunu merkezle (kullanıcı izin verirse)
     if (navigator.geolocation) {
@@ -176,5 +212,3 @@
   </script>
 </body>
 </html>
-
-
